# Practise-Programs

./: .gitignore  2020天津高考预测程序.c  LICENSE  README.md  Win95_OEMKey_Check.c
C/: REL_Zip.c  Stack_Simulation.c  Zoom_BMP.c  rle.c
CPP/: toGiveCD.cpp  weekOne_Order  weekOne_Order.cpp  weekOne_WordProcess.cpp  weekThree_ConstDeclearation.cpp  weekThree_Date.cpp  weekThree_asciiAndInteger.cpp  weekThree_nameValue.cpp  weekTwo_ASCII  weekTwo_swap  weekTwo_swap.cpp
C_Experience/: High_Accuracy_Add_Minus.c  Library_System.c
Dart/: classtable.dart  pvnrt.dart
HealthReport/: LICENSE  README.md  config.yaml  reportNcov-outschool.py
Helang-PKGBUILD/: PKGBUILD  README.md  avoid_ltc.patch  helang-script  helang-shell  setup.py
MySQL/: exp2.sql  exp3.sql
MySQL/exp4/travel_management/src/: classes.vala  database-error.vala  database.vala  main.vala  management.vala  meson.build
OS/: Makefile  PKGBUILD  README.md  Readme.txt  module_pcb_get.c  module_simple_hello.c  module_syscall.c  my_thread.c  osexp_syscall.patch  osexp_test_driver.c  osexp_test_syscall.c  rwbuf.c  syscall.c  thread.c
Python/: hello.py
TouhouDoom-PKGBUILD/: PKGBUILD  README.md  touhou-doom  touhoudoom.desktop
XDOJ/: 108.拼数字.c  135.拼数字排序.c  155.阶乘之和+双层for循环.c  167.数字统计排序.c  170.复试筛选.c  175.窗口模拟.c  177.累加和校验.c  201.后项除以前项.c  202.口袋抽取球.c  204.单词统计.c  215.字符逆序排放.c  229.字符串连接.c  234.成绩统计输出.c  243.考试排名.c  245.开灯问题.c  247.日期计算.c  248.股票.c  251.年月日统计.c  32.角谷定理.c  36.矩阵.c  37.排序2.c  39.马鞍点.c  44.斐波纳契数列.c  46.折点计数.c  51.寻找最大整数.c  54.abc组合.c  55.数列求和.c  64.自然数分解.c  65.数字处理.c  66.限行查询.c  69.0-1矩阵.c  71.相邻区域.c  (+7 more)
(+169 files in other folders)
